<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/unitContainer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_normal_16"
        android:layout_marginEnd="@dimen/spacing_normal_16"
        android:layout_marginBottom="@dimen/spacing_normal_16"
        android:background="@drawable/background_converter_field"
        android:padding="@dimen/spacing_small_8"
        app:layout_constraintBottom_toTopOf="@+id/unitContainer2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/iconUnit1"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="@dimen/spacing_tiny_4"
            android:src="@drawable/ripple_bg_rec_transparent"
            app:layout_constraintBottom_toBottomOf="@+id/titleUnit1"
            app:layout_constraintEnd_toStartOf="@+id/titleUnit1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/titleUnit1" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/titleUnit1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/spacing_tiny_4"
            android:layout_marginEnd="@dimen/spacing_tiny_4"
            android:text="NONE"
            app:layout_constraintBottom_toBottomOf="@+id/currencySelectBtn1"
            app:layout_constraintEnd_toStartOf="@+id/currencySelectBtn1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/iconUnit1"
            app:layout_constraintTop_toTopOf="@+id/currencySelectBtn1" />

        <ImageButton
            android:id="@+id/currencySelectBtn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_tiny_4"
            android:background="@drawable/ripple_bg_transparent"
            android:src="@drawable/ic_baseline_arrow_drop_down_24"
            app:layout_constraintBottom_toBottomOf="@+id/etUnit1"
            app:layout_constraintEnd_toStartOf="@+id/etUnit1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/titleUnit1"
            app:layout_constraintTop_toTopOf="@+id/etUnit1"
            app:tint="@color/white" />

        <View
            android:id="@+id/view1"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:layout_marginBottom="@dimen/spacing_normal_16"
            android:background="@color/swatch_9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_percent="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUnit1"
            style="@style/ExpressionTextInputEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_tiny_4"
            tools:text="123"
            android:textAlignment="viewEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/unitContainer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_normal_16"
        android:layout_marginTop="@dimen/spacing_normal_16"
        android:layout_marginEnd="@dimen/spacing_normal_16"
        android:layout_marginBottom="@dimen/spacing_normal_16"
        android:background="@drawable/background_converter_field"
        android:padding="@dimen/spacing_small_8"
        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/iconUnit2"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="@dimen/spacing_tiny_4"
            android:src="@drawable/ripple_bg_rec_transparent"
            app:layout_constraintBottom_toBottomOf="@+id/titleUnit2"
            app:layout_constraintEnd_toStartOf="@+id/titleUnit2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/titleUnit2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/titleUnit2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/spacing_tiny_4"
            android:layout_marginEnd="@dimen/spacing_tiny_4"
            android:text="NONE"
            app:layout_constraintBottom_toBottomOf="@+id/currencySelectBtn2"
            app:layout_constraintEnd_toStartOf="@+id/currencySelectBtn2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/iconUnit2"
            app:layout_constraintTop_toTopOf="@+id/currencySelectBtn2" />

        <ImageButton
            android:id="@+id/currencySelectBtn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_tiny_4"
            android:background="@drawable/ripple_bg_transparent"
            android:src="@drawable/ic_baseline_arrow_drop_down_24"
            app:layout_constraintBottom_toBottomOf="@+id/etUnit2"
            app:layout_constraintEnd_toStartOf="@+id/etUnit2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/titleUnit2"
            app:layout_constraintTop_toTopOf="@+id/etUnit2"
            app:tint="@color/white" />

        <View
            android:id="@+id/view2"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:layout_marginBottom="@dimen/spacing_normal_16"
            android:background="@color/swatch_9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_percent="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUnit2"
            style="@style/ExpressionTextInputEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_tiny_4"
            tools:text="321"
            android:textAlignment="viewEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/swatch_9"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/groupConverterUnit"
            style="@style/ChoiceChipsGroupStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/spacing_small_8"
            android:paddingEnd="@dimen/spacing_small_8">

            <com.google.android.material.chip.Chip
                android:id="@+id/currencyChip"
                style="@style/ChoiceChipsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency" />

            <com.google.android.material.chip.Chip
                android:id="@+id/lengthChip"
                style="@style/ChoiceChipsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/length" />

            <com.google.android.material.chip.Chip
                android:id="@+id/weightChip"
                style="@style/ChoiceChipsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight" />

            <com.google.android.material.chip.Chip
                android:id="@+id/speedChip"
                style="@style/ChoiceChipsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed" />

            <com.google.android.material.chip.Chip
                android:id="@+id/areaChip"
                style="@style/ChoiceChipsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area" />

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">

        <include
            layout="@layout/keypad_numeric"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>